--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,12 @@ name = "clinews"
 version = "0.1.0"
 edition = "2024"
 
+description="A simple CLI news reader app"
+license="MIT"
+authors=["Arun Vijay Sampath"]
+
 [dependencies]
-color = "0.2.3"
-colour = "2.1.0"
-serde = {version = "1.0.127", features = ["derive"]}
-serde_json = "1.0.66"
-ureq = "=2.12.1"
+newsapi = {path ="./newsapi"}
+dotenv = "0.15.0"
+crossterm = "0.28.1"
+termimad = "0.31.2"
